--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,12 @@
 # 上传和下载都需要使用该cookie
 # 在飞书妙记主页 https://meetings.feishu.cn/minutes/home 获取
 minutes_cookie = 
+manager_cookie=
+
+[CookiesPath]
+# 上传和下载都需要使用该cookie
+# 在飞书妙记主页 https://meetings.feishu.cn/minutes/home 获取
+minutes_cookie_path = 
 
 #（可选）
 # 需身份为企业创建人、超级管理员或普通管理员
@@ -23,7 +29,7 @@ manager_cookie =
 检查妙记的时间间隔（单位s，太短容易报错） = 3600
 妙记额度删除阈值（单位GB，填写了manager_cookie才有效） = 9.65
 保存路径（不填则默认为当前路径/data） = 
-是否只下载字幕文件（是/否） = 否
+是否只下载字幕文件（是/否） = 是
 字幕格式（srt/txt） = srt
 字幕是否包含说话人（是/否） = 是
 字幕是否包含时间戳（是/否） = 是
